Apex test now cover 100% of code

--- a/force-app/main/default/classes/ObjectFieldPickListTest.cls
+++ b/force-app/main/default/classes/ObjectFieldPickListTest.cls
@@ -2,20 +2,20 @@
 public class ObjectFieldPickListTest {
     @isTest
     static void getValues_works_with_recordPage() {
-        ObjectFieldPickList pickList = new ObjectFieldPickList(
-            ObjectFieldPickList.RECORD_PAGE,
-            'Account'
-        );
+        VisualEditor.DesignTimePageContext context = new VisualEditor.DesignTimePageContext();
+        context.pageType = ObjectFieldPickList.RECORD_PAGE;
+        context.entityName = 'Account';
+        ObjectFieldPickList pickList = new ObjectFieldPickList(context);
         VisualEditor.DynamicPickListRows rows = pickList.getValues();
         System.assert(rows.size() > 0, 'Fields not found');
     }
 
     @isTest
     static void getDefaultValue_work() {
-        ObjectFieldPickList pickList = new ObjectFieldPickList(
-            ObjectFieldPickList.RECORD_PAGE,
-            'Account'
-        );
+        VisualEditor.DesignTimePageContext context = new VisualEditor.DesignTimePageContext();
+        context.pageType = ObjectFieldPickList.RECORD_PAGE;
+        context.entityName = 'Account';
+        ObjectFieldPickList pickList = new ObjectFieldPickList(context);
         System.assertEquals(null, pickList.getDefaultValue());
     }
 }
